# xllmnrd

./: .codeclimate.yml  .gitignore  .hgeol  .hgignore  .hgtags  AUTHORS  CMakeLists.txt  CONTRIBUTING.md  ChangeLog  Makefile.am  NEWS  README  README.md  acinclude.m4  azure-pipelines.yml  bitbucket-pipelines.yml  build.makefile  cmakeconfig.h.in  configure.ac  docker-compose.yml  rocro.yml  setupkeys.sh  sonar-project.properties  upload.sh  xllmnrd.8.in
.github/: FUNDING.yml
.github/workflows/: release.yml
docker/: azure-pipelines.yml
etc/builder/: .dockerignore  Dockerfile
etc/gcc/: Dockerfile
gcc/: Dockerfile
libgnu/: Makefile.am  stdlib.h
libgnu/m4/: gnulib-cache.m4  gnulib-comp.m4
libxllmnrd/: CMakeLists.txt  Makefile.am  ascii.h  ifaddr.c  ifaddr.cpp  ifaddr.h  interface.cpp  interface.h  posix.cpp  posix.h  rtnetlink.cpp  rtnetlink.h  socket_utility.h
lsb/: Makefile.am  README  xllmnrd.in
m4/: gnulib-cache.m4  gnulib-comp.m4
po/: LINGUAS  Makevars  POTFILES.in  en.po  en@boldquot.po  en@quot.po  ja.po  xllmnrd.pot
sphinx/: conf.py  index.rst  internals.rst
src/: Makefile.am  ascii.h  ifaddr.c  ifaddr.cpp  ifaddr.h  ifaddr_deps.c  ifaddr_deps.h  llmnr.c  llmnr.h  llmnr_header.h  llmnr_packet.h  llmnr_responder.c  llmnr_responder.h  main.c  main.cpp  posix.cpp  posix.h  responder.c  responder.cpp  responder.h  run.sh  testmain.cpp  xllmnrd.8.in
test/: Makefile.am  main.cpp  run-test.in  test_ifaddr.cpp  test_rtnetlink.cpp  testifaddr.cpp  testmain.cpp  xmlreport.cpp  xmlreport.h
xllmnrd/: CMakeLists.txt  Makefile.am  llmnr.c  llmnr.h  llmnr_packet.h  responder.cpp  responder.h  xllmnrd.cpp
